package org.example.task;

public abstract class TaskFactory {
    public abstract Task createTask(String title, String description);
}


