package org.example.task.manager;

public interface TaskManagerObserver {
    void onTasksChanged();
}
